# finn-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SCALING.md  app.py  environment.yml  ingest.py  mcp_server.py  models.py  pyproject.toml  requirements.txt
.github/: AGENTS.md  CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
finn_tracker/: __main__.py  app.py  ingest.py  mcp_server.py  models.py
finn_tracker/dashboard/: index.html
finn_tracker/parsers/: csv_parser.py  pdf_parser.py
finn_tracker/utils/: db.py
parsers/: csv_parser.py  pdf_parser.py
sample_data/: generators.py
tests/: test_app.py  test_cli.py  test_db.py  test_ingest.py  test_pdf_parser.py
utils/: db.py
