[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finn-tracker"
version = "0.1.0"
description = "Privacy-first local expense tracker — import bank CSVs/PDFs, auto-categorize, explore trends. No data ever leaves your machine."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["finance", "expense", "privacy", "local", "csv", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "flask>=3.0,<4",
    "pdfplumber>=0.11,<1",
    "pandas>=1.5",
    "pypdf>=3.0",
    "reportlab>=4.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
finn-tracker = "finn_tracker.__main__:main"

[project.urls]
Homepage = "https://github.com/RachithP/finn-tracker"
Issues = "https://github.com/RachithP/finn-tracker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["finn_tracker*", "sample_data*"]

[tool.setuptools.package-data]
finn_tracker = ["dashboard/**/*"]
sample_data = ["*.py"]
